--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.28",
+    "mitt": "^2.1.0",
     "three": "^0.127.0",
+    "tiny-emitter": "^2.1.0",
     "tween.js": "^16.6.0",
     "vue": "^3.0.0",
     "vue-step-progress": "^0.3.6"
@@ -24,6 +26,8 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "file-loader": "^6.2.0",
+    "install": "^0.13.0",
     "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "eslintConfig": {
